--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "convict": "^1.0.0",
     "cookie-parser": "^1.3.5",
     "crashpad": "^1.2.4",
+    "crypto": "0.0.3",
     "del": "^1.2.0",
     "express": "^4.13.3",
     "express-bunyan-logger": "^1.1.1",
@@ -56,6 +57,7 @@
     "mongoose": "^4.1.2",
     "mongoose-connection-manager": "http://registry.npmjs.org/mongoose-connection-manager/-/mongoose-connection-manager-1.0.2.tgz",
     "mongoose-timestamp": "^0.4.0",
+    "ng-file-upload": "^6.2.1",
     "ngToast": "tameraydin/ngToast#1.5.3",
     "nib": "^1.1.0",
     "once-upon": "0.0.2",
@@ -65,7 +67,6 @@
     "resource-schema": "^0.21.0",
     "run-sequence": "^1.1.2",
     "serve-static": "^1.10.0",
-    "vinyl-paths": "^1.0.0",
-    "youtube-api": "^1.0.1"
+    "vinyl-paths": "^1.0.0"
   }
 }
