--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "passport-local-mongoose": "^1.0.1",
     "resource-schema": "^0.21.0",
     "run-sequence": "^1.1.2",
+    "sendgrid": "^1.9.2",
     "serve-static": "^1.10.0",
     "vinyl-paths": "^1.0.0"
   }
