--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bunyan": "^1.4.0",
     "byline": "^4.2.1",
     "coffee-script": "^1.9.3",
+    "connect-mongo": "^0.8.2",
     "convict": "^1.0.0",
     "cookie-parser": "^1.3.5",
     "crashpad": "^1.2.4",
@@ -38,7 +39,7 @@
     "del": "^1.2.0",
     "express": "^4.13.3",
     "express-bunyan-logger": "^1.1.1",
-    "express-session": "^1.11.3",
+    "express-session": "^1.12.1",
     "geomoment": "^0.6.1",
     "glob": "^5.0.14",
     "goodeggs-angular-browserify": "^3.0.0",
