--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular": "^1.4.3",
     "angular-animate": "^1.4.3",
     "angular-bootstrap": "^0.12.2",
+    "angular-mocks": "^1.4.7",
     "angular-resource": "^1.4.3",
     "angular-sanitize": "^1.4.3",
     "angular-ui-router": "^0.2.15",
@@ -30,6 +31,7 @@
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
     "byline": "^4.2.1",
+    "chai": "^3.4.1",
     "coffee-script": "^1.9.3",
     "connect-mongo": "^0.8.2",
     "convict": "^1.0.0",
@@ -43,6 +45,7 @@
     "geomoment": "^0.6.1",
     "glob": "^5.0.14",
     "goodeggs-angular-browserify": "^3.0.0",
+    "goodeggs-json-schema-converter": "^1.1.0",
     "goodeggs-karma": "^2.4.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
@@ -51,6 +54,7 @@
     "gulp-rev": "^5.1.0",
     "gulp-rev-replace": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-spawn-mocha": "^2.2.1",
     "gulp-stylus": "^2.0.6",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
@@ -63,6 +67,7 @@
     "ng-file-upload": "^6.2.1",
     "ngToast": "tameraydin/ngToast#1.5.3",
     "nib": "^1.1.0",
+    "objectid": "^1.1.0",
     "objectid-browser": "0.0.1",
     "once-upon": "0.0.2",
     "passport": "^0.2.2",
@@ -72,6 +77,7 @@
     "run-sequence": "^1.1.2",
     "sendgrid": "^1.9.2",
     "serve-static": "^1.10.0",
+    "unionized": "^4.4.0",
     "vinyl-paths": "^1.0.0"
   }
 }
