Create script for generating quests

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "lodash": "^3.10.1",
     "mongoose": "^4.1.2",
     "mongoose-connection-manager": "http://registry.npmjs.org/mongoose-connection-manager/-/mongoose-connection-manager-1.0.2.tgz",
+    "mongoose-querystream-worker": "0.0.2",
     "mongoose-timestamp": "^0.4.0",
     "ng-file-upload": "^6.2.1",
     "ngToast": "tameraydin/ngToast#1.5.3",
