Prototype a simple tour

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "angular-mocks": "^1.4.7",
     "angular-resource": "^1.4.3",
     "angular-sanitize": "^1.4.3",
+    "angular-tour": "daftmonk/angular-tour",
     "angular-ui-router": "^0.2.15",
     "aperture": "^1.1.1",
     "async": "^1.4.2",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
+    "bootstrap-tour": "^0.10.1",
     "bunyan": "^1.4.0",
     "byline": "^4.2.1",
     "chai": "^3.4.1",
@@ -62,6 +64,7 @@
     "jade": "^1.11.0",
     "joi": "^6.10.0",
     "joi-objectid": "^2.0.0",
+    "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "mongoose": "^4.1.2",
     "mongoose-connection-manager": "http://registry.npmjs.org/mongoose-connection-manager/-/mongoose-connection-manager-1.0.2.tgz",
