--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-animate": "^1.4.3",
     "angular-bootstrap": "^0.12.2",
     "angular-mocks": "^1.4.7",
+    "angular-payments": "laurihy/angular-payments",
     "angular-resource": "^1.4.3",
     "angular-sanitize": "^1.4.3",
     "angular-tour": "daftmonk/angular-tour",
