--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "dependencies": {
     "angular": "^1.4.3",
     "angular-animate": "^1.4.3",
-    "angular-bootstrap": "^0.12.2",
+    "angular-bootstrap-npm": "^0.14.3",
     "angular-mocks": "^1.4.7",
     "angular-payments": "laurihy/angular-payments",
     "angular-resource": "^1.4.3",
     "angular-sanitize": "^1.4.3",
     "angular-tour": "daftmonk/angular-tour",
+    "angular-ui-bootstrap": "angular-ui/bootstrap#0.14.3",
     "angular-ui-router": "^0.2.15",
     "aperture": "^1.1.1",
     "async": "^1.4.2",
