Test user register confirm flow

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   },
   "devDependencies": {
     "chai-as-promised": "^5.1.0",
+    "request": "^2.67.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
   }
