--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "angular-ui-router": "^0.2.15",
     "aperture": "^1.1.1",
     "async": "^1.4.2",
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.21",
+    "babel-loader": "^6.2.0",
+    "babel-preset-react": "^6.3.13",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
@@ -64,6 +68,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "helmet": "^0.10.0",
+    "history": "^1.13.1",
     "jade": "^1.11.0",
     "joi": "^6.10.0",
     "joi-objectid": "^2.0.0",
@@ -90,14 +95,21 @@
     "stripe": "^4.0.0",
     "unionized": "^4.4.0",
     "vinyl-paths": "^1.0.0",
+    "webpack": "^1.12.9",
     "wildcard": "^1.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
     "chai-as-promised": "^5.1.0",
+    "eslint-plugin-react": "^3.11.3",
+    "react-hot-loader": "^1.3.0",
     "request": "^2.67.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "superagent": "^1.5.0",
-    "superagent-bluebird-promise": "^2.1.1"
+    "superagent-bluebird-promise": "^2.1.1",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
