--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-ui-router": "^0.2.15",
     "aperture": "^1.1.1",
     "async": "^1.4.2",
+    "autoprefixer-core": "^6.0.1",
     "babel": "^6.3.13",
     "babel-core": "^6.3.21",
     "babel-loader": "^6.2.0",
@@ -50,6 +51,7 @@
     "express-bunyan-logger": "^1.1.1",
     "express-session": "^1.12.1",
     "express-sslify": "^1.0.1",
+    "extract-text-webpack-plugin": "^0.9.1",
     "fibrous": "^0.4.0",
     "geomoment": "^0.6.1",
     "glob": "^5.0.14",
@@ -88,11 +90,14 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.1",
+    "react-bootstrap": "^0.28.1",
+    "redux-thunk": "^1.0.2",
     "resource-schema": "^0.21.0",
     "run-sequence": "^1.1.2",
     "sendgrid": "^1.9.2",
     "serve-static": "^1.10.0",
     "stripe": "^4.0.0",
+    "superagent": "^1.6.1",
     "unionized": "^4.4.0",
     "vinyl-paths": "^1.0.0",
     "webpack": "^1.12.9",
@@ -102,11 +107,18 @@
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
     "chai-as-promised": "^5.1.0",
+    "css-loader": "^0.23.0",
     "eslint-plugin-react": "^3.11.3",
+    "postcss-color-rebeccapurple": "^2.0.0",
+    "postcss-loader": "^0.8.0",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.0.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
     "request": "^2.67.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.0",
     "superagent": "^1.5.0",
     "superagent-bluebird-promise": "^2.1.1",
     "webpack-dev-server": "^1.14.0",
