--- a/package.json
+++ b/package.json
@@ -91,7 +91,10 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.1",
     "react-bootstrap": "^0.28.1",
+    "react-tools": "^0.13.3",
+    "redux-api-middleware": "^0.6.2",
     "redux-thunk": "^1.0.2",
+    "reselect": "^2.0.1",
     "resource-schema": "^0.21.0",
     "run-sequence": "^1.1.2",
     "sendgrid": "^1.9.2",
@@ -106,16 +109,24 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "chai-as-promised": "^5.1.0",
     "css-loader": "^0.23.0",
     "eslint-plugin-react": "^3.11.3",
+    "jsdom": "^7.2.1",
+    "jsdomify": "^1.1.0",
+    "jsx-chai": "^2.0.0",
+    "mocha": "^2.3.4",
+    "mocha-jsdom": "^1.0.0",
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-loader": "^0.8.0",
+    "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
     "request": "^2.67.0",
+    "rquery": "^3.1.1",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
