--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "serve-static": "^1.10.0",
     "stripe": "^4.0.0",
     "superagent": "^1.6.1",
-    "unionized": "^4.4.0",
+    "unionized": "^4.5.1",
     "vinyl-paths": "^1.0.0",
     "webpack": "^1.12.9",
     "wildcard": "^1.1.2"
@@ -118,6 +118,7 @@
     "jsx-chai": "^2.0.0",
     "mocha": "^2.3.4",
     "mocha-jsdom": "^1.0.0",
+    "nock": "^3.6.0",
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.3",
@@ -125,6 +126,7 @@
     "redux-devtools": "^3.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
+    "redux-mock-store": "0.0.4",
     "request": "^2.67.0",
     "rquery": "^3.1.1",
     "sinon": "^1.17.2",
