GET redux reducers, action, and store working

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "gulp-util": "^3.0.6",
     "helmet": "^0.10.0",
     "history": "^1.13.1",
+    "isomorphic-fetch": "^2.2.0",
     "jade": "^1.11.0",
     "joi": "^6.10.0",
     "joi-objectid": "^2.0.0",
@@ -84,14 +85,18 @@
     "ngToast": "tameraydin/ngToast#1.5.3",
     "nib": "^1.1.0",
     "normalize-email": "^1.0.0",
+    "normalizr": "^1.4.0",
     "objectid": "^1.1.0",
     "objectid-browser": "0.0.1",
     "once-upon": "0.0.2",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.1",
+    "qs": "^6.0.1",
     "react-bootstrap": "^0.28.1",
     "react-tools": "^0.13.3",
+    "redux-actions": "^0.9.0",
+    "redux-api": "^0.8.2",
     "redux-api-middleware": "^0.6.2",
     "redux-thunk": "^1.0.2",
     "reselect": "^2.0.1",
@@ -102,6 +107,7 @@
     "stripe": "^4.0.0",
     "superagent": "^1.6.1",
     "unionized": "^4.5.1",
+    "url": "^0.11.0",
     "vinyl-paths": "^1.0.0",
     "webpack": "^1.12.9",
     "wildcard": "^1.1.2"
