Make settings isomorphic

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "joi-objectid": "^2.0.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
+    "mockery": "^1.4.0",
     "mongoose": "^4.1.2",
     "mongoose-connection-manager": "http://registry.npmjs.org/mongoose-connection-manager/-/mongoose-connection-manager-1.0.2.tgz",
     "mongoose-querystream-worker": "0.0.2",
@@ -119,6 +120,7 @@
     "babel-register": "^6.3.13",
     "chai-as-promised": "^5.1.0",
     "css-loader": "^0.23.0",
+    "css-modules-require-hook": "^2.1.0",
     "eslint-plugin-react": "^3.11.3",
     "jsdom": "^7.2.1",
     "jsdomify": "^1.1.0",
@@ -126,8 +128,13 @@
     "mocha": "^2.3.4",
     "mocha-jsdom": "^1.0.0",
     "nock": "^3.6.0",
+    "postcss": "^5.0.13",
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-loader": "^0.8.0",
+    "postcss-modules-extract-imports": "^1.0.0",
+    "postcss-modules-local-by-default": "^1.0.1",
+    "postcss-modules-scope": "^1.0.0",
+    "postcss-modules-values": "^1.1.1",
     "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.0.0",
