--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "redux-actions": "^0.9.0",
     "redux-api": "^0.8.2",
     "redux-api-middleware": "^0.6.2",
+    "redux-form": "^4.0.5",
     "redux-thunk": "^1.0.2",
     "reselect": "^2.0.1",
     "resource-schema": "^0.21.0",
